--- a/index.html
+++ b/index.html
@@ -21,116 +21,143 @@
     </nav>
     <div class="row" id="demo">
       <div class="col s12">
-        <ul class="collection with-header">
-          <li class="collection-header"><h4>Mina</h4></li>
-          <li class="collection-item"><div><a href="https://www.amazon.fr/dp/B00IADJSLG/ref=cm_gf_ss_d_d_p_aBN_p0_qd4" target="_blank" class="link_color">Disney: les 50 Plus Belles Chansons</a></div></li>
-          <li class="collection-item"><div><a href="https://www.amazon.fr/dp/B019DWWU4O/ref=cm_gf_ss_d_d_p_aBN_p0_qd2" target="_blank" class="link_color">Kit de moulage d'empreintes de pieds et mains</a></div></li>
-          <li class="collection-item"><div><a href="https://www.amazon.fr/dp/B01J6O2EW2/ref=cm_gf_ss_d_d_p_aBN_p0_qd0" target="_blank" class="link_color">Jeu de Cubes Sérigraphiés</a></div></li>
-        </ul>
-      </div>
-      <div class="col s6">
-        <ul class="collection with-header">
-          <li class="collection-header"><h4>Aurélie</h4></li>
-          <li class="collection-item"><div><a href="https://livre.fnac.com/a10561606/Millenium-Tome-5-La-fille-qui-rendait-coup-pour-coup-David-Lagercrantz?omnsearchpos=1" target="_blank" class="link_color">Le livre: Millénium - Tome 5</a></div></li>
-          <li class="collection-item"><div><a href="https://livre.fnac.com/a10826868/Camilla-Lackberg-La-sorciere?omnsearchpos=1" target="_blank" class="link_color">Le livre: La sorcière</a></div></li>
-          <li class="collection-item"><div><a href="https://www.maccosmetics.fr/product/13854/52593/produits/maquillage/levres/rouge-a-levres/rouge-a-levres-retro-matte" target="_blank" class="link_color">Rouge à lèvres retro matte</a></div></li>
-        </ul>
-      </div>
-      <div class="col s6">
-        <ul class="collection with-header">
-          <li class="collection-header"><h4>Florent</h4></li>
-          <!--<li v-for="task in tasks" class="collection-item task" :key="task['.key']""><div v-if="task.list === 'florent'"><a href="https://livre.fnac.com/a6449048/Elfes-Tome-05-Elfes-Ma-Yin?omnsearchpos=1" target="_blank" class="link_color">{{ task.text }}5</a></div></li>-->
-          <li v-for="task in tasks" class="collection-item task" :key="task['.key']" v-if="task.list === 'florent'">
-            <a v-bind:href="task.url" target="_blank" class="link_color">{{ task.text }}</a>
-            <button v-on:click="removeTask(task)">X</button>
+        <ul class="collapsible popout" data-collapsible="accordion">
+          <li>
+            <div class="collapsible-header pink darken-1">Mina</div>
+            <div class="collapsible-body">
+              <ul>
+                <li class="collection-item"><div><a href="https://www.amazon.fr/dp/B00IADJSLG/ref=cm_gf_ss_d_d_p_aBN_p0_qd4" target="_blank" class="link_color">Disney: les 50 Plus Belles Chansons</a></div></li>
+                <li class="collection-item"><div><a href="https://www.amazon.fr/dp/B019DWWU4O/ref=cm_gf_ss_d_d_p_aBN_p0_qd2" target="_blank" class="link_color">Kit de moulage d'empreintes de pieds et mains</a></div></li>
+                <li class="collection-item"><div><a href="https://www.amazon.fr/dp/B01J6O2EW2/ref=cm_gf_ss_d_d_p_aBN_p0_qd0" target="_blank" class="link_color">Jeu de Cubes Sérigraphiés</a></div></li>
+                <li v-for="task in tasks" class="collection-item task" :key="task['.key']" v-if="task.list === 'mina'">
+                  <a v-bind:href="task.url" target="_blank" class="link_color">{{ task.text }}</a>
+                  <button v-on:click="removeTask(task)">x</button>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header pink darken-1">Aurélie</div>
+            <div class="collapsible-body">
+              <ul>
+                <li class="collection-item"><div><a href="https://livre.fnac.com/a10561606/Millenium-Tome-5-La-fille-qui-rendait-coup-pour-coup-David-Lagercrantz?omnsearchpos=1" target="_blank" class="link_color">Le livre: Millénium - Tome 5</a></div></li>
+                <li class="collection-item"><div><a href="https://livre.fnac.com/a10826868/Camilla-Lackberg-La-sorciere?omnsearchpos=1" target="_blank" class="link_color">Le livre: La sorcière</a></div></li>
+                <li class="collection-item"><div><a href="https://www.maccosmetics.fr/product/13854/52593/produits/maquillage/levres/rouge-a-levres/rouge-a-levres-retro-matte" target="_blank" class="link_color">Rouge à lèvres retro matte</a></div></li>
+                <li v-for="task in tasks" class="collection-item task" :key="task['.key']" v-if="task.list === 'aurelie'">
+                  <a v-bind:href="task.url" target="_blank" class="link_color">{{ task.text }}</a>
+                  <a v-on:click="removeTask(task)" class="waves-effect waves-light btn">réserver</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header pink darken-1">Florent</div>
+            <div class="collapsible-body">
+              <ul>
+                <li v-for="task in tasks" class="collection-item task" :key="task['.key']" v-if="task.list === 'florent'">
+                  <a v-bind:href="task.url" target="_blank" class="link_color">{{ task.text }}</a>
+                  <button v-on:click="removeTask(task)">x</button>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
 
+      <div class="fixed-action-btn">
+        <a class="btn-floating btn-large teal darken-1" href="#modal1">
+          <i class="large material-icons">add</i>
+        </a>
+      </div>
 
+      <div id="modal1" class="modal">
+        <div class="modal-content">
+          <h4>Ajoute un cadeau</h4>
+          <form id="add" v-on:submit.prevent="addTask">
+            <p>
+              <input name="addTask" type="radio" id="test1" value="mina" v-model="newTask.list"/>
+              <label for="test1">Mina</label>
+            </p>
+            <p>
+              <input name="addTask" type="radio" id="test2" value="aurelie" v-model="newTask.list"/>
+              <label for="test2">Aurelie</label>
+            </p>
+            <p>
+              <input name="addTask" type="radio" id="test3" value="florent" v-model="newTask.list"/>
+              <label for="test3">Florent</label>
+            </p>
+            <input type="text" name="addTask" v-model="newTask.text" placeholder="Nom du cadeau">
+            <input type="text" name="addTask" v-model="newTask.url" placeholder="URL du cadeau">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Ajouter
+              <i class="material-icons right">send</i>
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
 
-  <!--<ol>
-    <li v-for="task in tasks" class="task" :key="task['.key']">
-      <span>{{ task.text }}</span>
-      <span>{{ task.url }}</span>
-      <span>{{ task.list }}</span>
-      <button v-on:click="removeTask(task)">X</button>
-    </li>
-  </ol>-->
-  <form id="add" v-on:submit.prevent="addTask">
-    <p>
-      <input name="addTask" type="radio" id="test1" value="mina" v-model="newTask.list"/>
-      <label for="test1">Mina</label>
-    </p>
-    <p>
-      <input name="addTask" type="radio" id="test2" value="aurelie" v-model="newTask.list"/>
-      <label for="test2">Aurelie</label>
-    </p>
-    <p>
-      <input name="addTask" type="radio" id="test3" value="florent" v-model="newTask.list"/>
-      <label for="test3">Florent</label>
-    </p>
-    <input type="text" name="addTask" v-model="newTask.text" placeholder="Nom du cadeau">
-    <input type="text" name="addTask" v-model="newTask.url" placeholder="URL du cadeau">
-    <input type="submit" value="Ajouter">
-  </form>
-</div>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
+        $('.modal').modal();
+      });
+    </script>
 
-<script>
-// Replace abc with your Firebase domain (ex. vuejs-c86csa4)
-// Initialize Firebase
-var config = {
-  apiKey: "AIzaSyDiEi93EVvH7YR5g23PNNI_Cmr5ePsZQZI",
-  authDomain: "giftlist-1a12c.firebaseapp.com",
-  databaseURL: "https://giftlist-1a12c.firebaseio.com",
-  projectId: "giftlist-1a12c",
-  storageBucket: "giftlist-1a12c.appspot.com",
-  messagingSenderId: "693813568430"
-};
-firebase.initializeApp(config);
-var tasksRef = firebase.database().ref('tasks');
-var app = new Vue({
-  el: '#demo',
-  data: {
-    newTask: {
-      text: '',
-      url: '',
-      list: ''
-    }
-  },
-  firebase: {
-    tasks: tasksRef
-  },
-  computed: {
-    validation: function () {
-      return {
-        text: !!this.newTask.text.trim(),
-        url: !!this.newTask.url.trim(),
-        list: !!this.newTask.list.trim()
+    <script>
+    // Replace abc with your Firebase domain (ex. vuejs-c86csa4)
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDiEi93EVvH7YR5g23PNNI_Cmr5ePsZQZI",
+      authDomain: "giftlist-1a12c.firebaseapp.com",
+      databaseURL: "https://giftlist-1a12c.firebaseio.com",
+      projectId: "giftlist-1a12c",
+      storageBucket: "giftlist-1a12c.appspot.com",
+      messagingSenderId: "693813568430"
+    };
+    firebase.initializeApp(config);
+    var tasksRef = firebase.database().ref('tasks');
+    var app = new Vue({
+      el: '#demo',
+      data: {
+        newTask: {
+          text: '',
+          url: '',
+          list: ''
+        }
+      },
+      firebase: {
+        tasks: tasksRef
+      },
+      computed: {
+        validation: function () {
+          return {
+            text: !!this.newTask.text.trim(),
+            url: !!this.newTask.url.trim(),
+            list: !!this.newTask.list.trim()
+          }
+        },
+        isValid: function () {
+          var validation = this.validation
+          return Object.keys(validation).every(function (key) {
+            return validation[key]
+          })
+        }
+      },
+      methods: {
+        addTask: function () {
+          if (this.isValid) {
+            tasksRef.push(this.newTask);
+            this.newTask.text = '';
+            this.newTask.url = '';
+            this.newTask.list = '';
+          }
+        },
+        removeTask: function (task) {
+          tasksRef.child(task['.key']).remove();
+        }
       }
-    },
-    isValid: function () {
-      var validation = this.validation
-      return Object.keys(validation).every(function (key) {
-        return validation[key]
-      })
-    }
-  },
-  methods: {
-    addTask: function () {
-      if (this.isValid) {
-        tasksRef.push(this.newTask);
-        this.newTask.text = '';
-        this.newTask.url = '';
-        this.newTask.list = '';
-      }
-    },
-    removeTask: function (task) {
-      tasksRef.child(task['.key']).remove();
-    }
-  }
-});
-</script>
+    });
+    </script>
 
   </body>
 </html>
