le style avance

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li class="collection-item"><div><a href="https://www.amazon.fr/dp/B01J6O2EW2/ref=cm_gf_ss_d_d_p_aBN_p0_qd0" target="_blank" class="link_color">Jeu de Cubes Sérigraphiés</a></div></li>
                 <li v-for="task in tasks" class="collection-item task" :key="task['.key']" v-if="task.list === 'mina'">
                   <a v-bind:href="task.url" target="_blank" class="link_color">{{ task.text }}</a>
-                  <button v-on:click="removeTask(task)">x</button>
+                  <button v-on:click="book(task)">x</button>
                 </li>
               </ul>
             </div>
@@ -45,7 +45,10 @@
                 <li class="collection-item"><div><a href="https://www.maccosmetics.fr/product/13854/52593/produits/maquillage/levres/rouge-a-levres/rouge-a-levres-retro-matte" target="_blank" class="link_color">Rouge à lèvres retro matte</a></div></li>
                 <li v-for="task in tasks" class="collection-item task" :key="task['.key']" v-if="task.list === 'aurelie'">
                   <a v-bind:href="task.url" target="_blank" class="link_color">{{ task.text }}</a>
-                  <a v-on:click="removeTask(task)" class="waves-effect waves-light btn">réserver</a>
+                  <p>
+                    <input type="checkbox" @click="book(task)" id="test5" class="btnalign"/>
+                    <label for="test5">{{ task.isBooked ? 'réservé' : 'réserver' }}</label>
+                  </p>
                 </li>
               </ul>
             </div>
@@ -56,7 +59,7 @@
               <ul>
                 <li v-for="task in tasks" class="collection-item task" :key="task['.key']" v-if="task.list === 'florent'">
                   <a v-bind:href="task.url" target="_blank" class="link_color">{{ task.text }}</a>
-                  <button v-on:click="removeTask(task)">x</button>
+                  <button v-on:click="book(task)">x</button>
                 </li>
               </ul>
             </div>
@@ -122,8 +125,11 @@
         newTask: {
           text: '',
           url: '',
-          list: ''
-        }
+          list: '',
+          isBooked: false
+        },
+        activeButton: 'waves-effect waves-light btn btnalign',
+        disabledButton: 'disabled'
       },
       firebase: {
         tasks: tasksRef
@@ -133,7 +139,8 @@
           return {
             text: !!this.newTask.text.trim(),
             url: !!this.newTask.url.trim(),
-            list: !!this.newTask.list.trim()
+            list: !!this.newTask.list.trim(),
+            isBooked: !!this.newTask.isBooked
           }
         },
         isValid: function () {
@@ -150,10 +157,16 @@
             this.newTask.text = '';
             this.newTask.url = '';
             this.newTask.list = '';
+            this.newTask.isBooked = false;
           }
         },
-        removeTask: function (task) {
-          tasksRef.child(task['.key']).remove();
+        book: function (task) {
+          if (task.isBooked) {
+            tasksRef.child(task['.key']).update({isBooked: false});
+          } else {
+            tasksRef.child(task['.key']).update({ isBooked: true });            
+          }
+          console.error('isbooked', task.isBooked);
         }
       }
     });
