comment add button before send lists to the family!

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         </ul>
       </div>
 
-      <div class="fixed-action-btn">
+      <!--<div class="fixed-action-btn">
         <a class="btn-floating btn-large teal darken-1" href="#modal1">
           <i class="large material-icons">add</i>
         </a>
-      </div>
+      </div>-->
 
       <div id="modal1" class="modal">
         <div class="modal-content">
